--- a/Sample/Properties/AndroidManifest.xml
+++ b/Sample/Properties/AndroidManifest.xml
@@ -1,5 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-<manifest xmlns:android="http://schemas.android.com/apk/res/android" android:versionCode="1" android:versionName="1.0" package="Sample.Sample">
+<manifest xmlns:android="http://schemas.android.com/apk/res/android" android:versionName="1.0.1" package="Sample.Sample" android:versionCode="2">
 	<uses-sdk />
 	<application android:label="Sample">
 	</application>
